2009-07-28  Kenichi Handa  <handa@m17n.org>

	* xfaces.c (face_with_height): Call font_clear_prop.

2009-07-28  Kenichi Handa  <handa@m17n.org>

	* font.c (font_parse_xlfd): Check DPI and AVGWIDTH properties more
	rigidly.

	* xfont.c (xfont_list_pattern): Don't ignore the return value of
	font_parse_xlfd.  Check font properties more rigidly.

2009-07-27  Kenichi Handa  <handa@m17n.org>

	* xfaces.c (face_with_height): Call font_clear_prop.

2009-07-26  Chong Yidong  <cyd@stupidchicken.com>

	* nsfont.m (nsfont_draw): Revert 2009-07-15 change.

	* nsterm.m (ns_maybe_dumpglyphs_background): Revert 2009-07-15
	change.
	(ns_get_color): Revert 2009-07-16 change.

2009-07-24  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfont.m (ns_findfonts): Correctly return fallback in match case.

2009-07-23  Yavor Doganov  <yavor@gnu.org>

	* nsfont.m (NSFontDescriptor.h): Explicitly include under GNUstep.

2009-07-23  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsterm.m (EmacsView-keyUp:): Only act when running under Tiger.
	Bugs 3792, 3720, 2402.
	(ns_lookup_indexed_color): Check for bad index.
	(ns_index_color): Init unused slot to 0.
	(ns_dumpglyphs_box_or_relief): Replace useless xassert with an if().
	Bug 3714, possibly 3082.

2009-07-21  Chong Yidong  <cyd@stupidchicken.com>

	* fileio.c (Vauto_save_include_big_deletions): New variable.
	(Fdo_auto_save): Disable auto-save only if
	auto-save-include-big-deletions is nil.

2009-07-21  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (move_it_to): For continued lines ending in a tab, take
	the overflowed pixels into account (Bug#3879).

2009-07-17  Kenichi Handa  <handa@m17n.org>

	* casetab.c (shuffle): Fix the logic of setting up the cycle.

2009-07-16  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* nsfns.m (Fns_set_alpha): Remove function.
	(syms_of_nsfns): Don't defsubr it.

	* nsterm.m (ns_get_color): Remove incompatible color formats.
	(ns_color_to_lisp): Generate #rrggbb color format string.
