@@ -1,3 +1,8 @@
+2009-07-29  Adrian Robert  <Adrian.B.Robert@gmail.com>
+
+	* nsfont.m (ns_findfonts): Fix 2009-07-24 change to return only one
+	element, not a list, for match case.
+
 2009-07-28  Kenichi Handa  <handa@m17n.org>
 
 	* xfaces.c (face_with_height): Call font_clear_prop.
